--- a/3D/3D_Dubins_Test.ipynb
+++ b/3D/3D_Dubins_Test.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dmitriy Novichkov\\AppData\\Local\\Temp\\ipykernel_24192\\4080754483.py:16: FutureWarning: this method is deprecated in favour of `Styler.hide(axis=\"index\")`\n",
+      "C:\\Users\\Dmitriy Novichkov\\AppData\\Local\\Temp\\ipykernel_8492\\4080754483.py:16: FutureWarning: this method is deprecated in favour of `Styler.hide(axis=\"index\")`\n",
       "  display(data.head().style.hide_index())\n"
      ]
     },
@@ -18,62 +18,62 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_2fc4d\">\n",
+       "<table id=\"T_0c08b\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_2fc4d_level0_col0\" class=\"col_heading level0 col0\" ></th>\n",
-       "      <th id=\"T_2fc4d_level0_col1\" class=\"col_heading level0 col1\" colspan=\"2\">Трасса 1</th>\n",
-       "      <th id=\"T_2fc4d_level0_col3\" class=\"col_heading level0 col3\" colspan=\"2\">Трасса 2</th>\n",
+       "      <th id=\"T_0c08b_level0_col0\" class=\"col_heading level0 col0\" ></th>\n",
+       "      <th id=\"T_0c08b_level0_col1\" class=\"col_heading level0 col1\" colspan=\"2\">Трасса 1</th>\n",
+       "      <th id=\"T_0c08b_level0_col3\" class=\"col_heading level0 col3\" colspan=\"2\">Трасса 2</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_2fc4d_level1_col0\" class=\"col_heading level1 col0\" >№</th>\n",
-       "      <th id=\"T_2fc4d_level1_col1\" class=\"col_heading level1 col1\" >Широта</th>\n",
-       "      <th id=\"T_2fc4d_level1_col2\" class=\"col_heading level1 col2\" >Долгота</th>\n",
-       "      <th id=\"T_2fc4d_level1_col3\" class=\"col_heading level1 col3\" >Широта</th>\n",
-       "      <th id=\"T_2fc4d_level1_col4\" class=\"col_heading level1 col4\" >Долгота</th>\n",
+       "      <th id=\"T_0c08b_level1_col0\" class=\"col_heading level1 col0\" >№</th>\n",
+       "      <th id=\"T_0c08b_level1_col1\" class=\"col_heading level1 col1\" >Широта</th>\n",
+       "      <th id=\"T_0c08b_level1_col2\" class=\"col_heading level1 col2\" >Долгота</th>\n",
+       "      <th id=\"T_0c08b_level1_col3\" class=\"col_heading level1 col3\" >Широта</th>\n",
+       "      <th id=\"T_0c08b_level1_col4\" class=\"col_heading level1 col4\" >Долгота</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_2fc4d_row0_col0\" class=\"data row0 col0\" >1</td>\n",
-       "      <td id=\"T_2fc4d_row0_col1\" class=\"data row0 col1\" >56.142020</td>\n",
-       "      <td id=\"T_2fc4d_row0_col2\" class=\"data row0 col2\" >35.005040</td>\n",
-       "      <td id=\"T_2fc4d_row0_col3\" class=\"data row0 col3\" >56.141050</td>\n",
-       "      <td id=\"T_2fc4d_row0_col4\" class=\"data row0 col4\" >35.002670</td>\n",
+       "      <td id=\"T_0c08b_row0_col0\" class=\"data row0 col0\" >1</td>\n",
+       "      <td id=\"T_0c08b_row0_col1\" class=\"data row0 col1\" >56.142020</td>\n",
+       "      <td id=\"T_0c08b_row0_col2\" class=\"data row0 col2\" >35.005040</td>\n",
+       "      <td id=\"T_0c08b_row0_col3\" class=\"data row0 col3\" >56.141050</td>\n",
+       "      <td id=\"T_0c08b_row0_col4\" class=\"data row0 col4\" >35.002670</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_2fc4d_row1_col0\" class=\"data row1 col0\" >2</td>\n",
-       "      <td id=\"T_2fc4d_row1_col1\" class=\"data row1 col1\" >56.144530</td>\n",
-       "      <td id=\"T_2fc4d_row1_col2\" class=\"data row1 col2\" >35.005360</td>\n",
-       "      <td id=\"T_2fc4d_row1_col3\" class=\"data row1 col3\" >56.138170</td>\n",
-       "      <td id=\"T_2fc4d_row1_col4\" class=\"data row1 col4\" >35.009470</td>\n",
+       "      <td id=\"T_0c08b_row1_col0\" class=\"data row1 col0\" >2</td>\n",
+       "      <td id=\"T_0c08b_row1_col1\" class=\"data row1 col1\" >56.144530</td>\n",
+       "      <td id=\"T_0c08b_row1_col2\" class=\"data row1 col2\" >35.005360</td>\n",
+       "      <td id=\"T_0c08b_row1_col3\" class=\"data row1 col3\" >56.138170</td>\n",
+       "      <td id=\"T_0c08b_row1_col4\" class=\"data row1 col4\" >35.009470</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_2fc4d_row2_col0\" class=\"data row2 col0\" >3</td>\n",
-       "      <td id=\"T_2fc4d_row2_col1\" class=\"data row2 col1\" >56.146140</td>\n",
-       "      <td id=\"T_2fc4d_row2_col2\" class=\"data row2 col2\" >35.011570</td>\n",
-       "      <td id=\"T_2fc4d_row2_col3\" class=\"data row2 col3\" >56.140760</td>\n",
-       "      <td id=\"T_2fc4d_row2_col4\" class=\"data row2 col4\" >35.013690</td>\n",
+       "      <td id=\"T_0c08b_row2_col0\" class=\"data row2 col0\" >3</td>\n",
+       "      <td id=\"T_0c08b_row2_col1\" class=\"data row2 col1\" >56.146140</td>\n",
+       "      <td id=\"T_0c08b_row2_col2\" class=\"data row2 col2\" >35.011570</td>\n",
+       "      <td id=\"T_0c08b_row2_col3\" class=\"data row2 col3\" >56.140760</td>\n",
+       "      <td id=\"T_0c08b_row2_col4\" class=\"data row2 col4\" >35.013690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_2fc4d_row3_col0\" class=\"data row3 col0\" >4</td>\n",
-       "      <td id=\"T_2fc4d_row3_col1\" class=\"data row3 col1\" >56.142890</td>\n",
-       "      <td id=\"T_2fc4d_row3_col2\" class=\"data row3 col2\" >35.012490</td>\n",
-       "      <td id=\"T_2fc4d_row3_col3\" class=\"data row3 col3\" >56.139820</td>\n",
-       "      <td id=\"T_2fc4d_row3_col4\" class=\"data row3 col4\" >35.006550</td>\n",
+       "      <td id=\"T_0c08b_row3_col0\" class=\"data row3 col0\" >4</td>\n",
+       "      <td id=\"T_0c08b_row3_col1\" class=\"data row3 col1\" >56.142890</td>\n",
+       "      <td id=\"T_0c08b_row3_col2\" class=\"data row3 col2\" >35.012490</td>\n",
+       "      <td id=\"T_0c08b_row3_col3\" class=\"data row3 col3\" >56.139820</td>\n",
+       "      <td id=\"T_0c08b_row3_col4\" class=\"data row3 col4\" >35.006550</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_2fc4d_row4_col0\" class=\"data row4 col0\" >5</td>\n",
-       "      <td id=\"T_2fc4d_row4_col1\" class=\"data row4 col1\" >56.142920</td>\n",
-       "      <td id=\"T_2fc4d_row4_col2\" class=\"data row4 col2\" >35.003780</td>\n",
-       "      <td id=\"T_2fc4d_row4_col3\" class=\"data row4 col3\" >56.141000</td>\n",
-       "      <td id=\"T_2fc4d_row4_col4\" class=\"data row4 col4\" >35.009380</td>\n",
+       "      <td id=\"T_0c08b_row4_col0\" class=\"data row4 col0\" >5</td>\n",
+       "      <td id=\"T_0c08b_row4_col1\" class=\"data row4 col1\" >56.142920</td>\n",
+       "      <td id=\"T_0c08b_row4_col2\" class=\"data row4 col2\" >35.003780</td>\n",
+       "      <td id=\"T_0c08b_row4_col3\" class=\"data row4 col3\" >56.141000</td>\n",
+       "      <td id=\"T_0c08b_row4_col4\" class=\"data row4 col4\" >35.009380</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x212011a5a10>"
+       "<pandas.io.formats.style.Styler at 0x1c3fb081d50>"
       ]
      },
      "metadata": {},
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,9 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'for' statement on line 68 (2800318787.py, line 69)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[5], line 69\u001b[1;36m\u001b[0m\n\u001b[1;33m    x = data['Трасса 1']['Широта'][colum]\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'for' statement on line 68\n"
+     ]
+    }
+   ],
    "source": [
     "from dubins_3Dpath_planning import*\n",
     "\n",
